Fixed dropdown. Now text fits in perfectly. Also information icon is now positioned propperly. Also fixed some statuses that were shifted one character to the right under workshop

--- a/src/app/shell/personal-cabinet/shared-cabinet/applications/applications.component.scss
+++ b/src/app/shell/personal-cabinet/shared-cabinet/applications/applications.component.scss
@@ -15,6 +15,10 @@
   margin-bottom: 1rem;
 }
 
+::ng-deep .mat-form-field-infix {
+  width: 110px !important;
+}
+
 @media (max-width: 1200px) {
   .dropdown {
     width: auto;
